--- a/source/_theme/obpnomal/basic.html
+++ b/source/_theme/obpnomal/basic.html
@@ -143,7 +143,8 @@
     {%- endif %}
 {%- endblock %}
 {%- block extrahead %} {% endblock %}
-<script type="text/javascript" src="http://tajs.qq.com/stats?sId=22419042" charset="UTF-8"></script>
+<!-- FOR v2.ts.qq-->
+<script type="text/javascript" src="http://tajs.qq.com/stats?sId=22416147" charset="UTF-8"></script>
 
   </head>
   <body>
