--- a/source/_theme/obpnomal/layout.html
+++ b/source/_theme/obpnomal/layout.html
@@ -18,10 +18,7 @@
     <div class="header-wrapper">
       <div class="header">
           <div class="logo"><a href="{{ pathto(master_doc) }}">
-            <img class="logo" src="{{ pathto('_static/' + logo, 1) }}" alt="Logo"/>
-        <!--
-        <img class="logo" src="{{ pathto('_static/nginx-wiki-logo.png',1) }}" alt="Logo"/>
-        -->
+            <img class="logo" src="{{ pathto('_static/taoc-doc-logo-h90.png',1) }}" alt="Logo"/>
           </a></div>
         {%- if logo %}
         {%- endif %}
@@ -87,10 +84,10 @@ Version: <b>{{ release }}</b>
 <!-- for Disqus actions -->
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'chaos2go1rtfdorg'; // required: replace example with your forum shortname
+    var disqus_shortname = 'taoczhreadthedocsorg'; // required: replace example with your forum shortname
     // The following are highly recommended additional parameters. Remove the slashes in front to use.
     var disqus_identifier = "{{ pagename }}";
-    var disqus_url = "http://readthedocs.org/docs/chaos2go1/en/latest/{{ pagename }}{{ file_suffix }}";
+    var disqus_url = "http://taoc-zh.readthedocs.org/en/latest/{{ pagename }}{{ file_suffix }}";
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
@@ -128,19 +125,21 @@ Version: <b>{{ release }}</b>
 
         {{ super() }}
             <div class="clearer"></div>
+
 <div class="footer" style="text-align:left;">
-<a href="http://groups.google.com/group/openbookproject">访问
+<a href="http://groups.google.com/group/taoc-chinese-translation">访问
   <img src="http://groups.google.com/intl/zh-CN/images/logos/groups_logo_sm.gif"
          height=30 width=141 alt="Google 网上论坛">
 </a>
 <br/>
-订阅 <a href="http://groups.google.com/group/openbookproject">"O.B.P"</a>:
+订阅 <a href="http://groups.google.com/group/taoc-chinese-translation">"TAOC Chinese Translation"</a>:
 <br/>
-  <form action="http://groups.google.com/group/openbookproject/boxsubscribe">
+  <form action="http://groups.google.com/group/taoc-chinese-translation/boxsubscribe">
 邮件： <input type=text name=email>
-  <input type=submit name="sub" value="申请">
+  <input type=submit name="sub" value="申請">
 </form>
-</div>  <!--class="footer"-->
+
+</div> <!-- class="footer"-->
       </div>    <!-- class="footercnt" -->
     </div>      <!--class="footer-wrapper"-->
     <!-- comment utility -->
